#

SUBDIRS = \
	libvarnishcompat \
	libvarnish \
	libvarnishapi \
	libvarnishtools \
	libvcl \
	libvgz \
	libvmod_debug \
	libvmod_std \
	libvmod_directors

DIST_SUBDIRS = 	\
	libvarnishcompat \
	libvarnish \
	libvarnishapi \
	libvarnishtools \
	libvcl \
	libvgz \
	libvmod_debug \
	libvmod_std \
	libvmod_directors
