#

SUBDIRS = \
	libvarnishcompat \
	libvarnish \
	libvarnishapi \
	libvarnishtools \
	libvcc \
	libvgz \
	libvmod_debug \
	libvmod_std \
	libvmod_directors

DIST_SUBDIRS = 	\
	libvarnishcompat \
	libvarnish \
	libvarnishapi \
	libvarnishtools \
	libvcc \
	libvgz \
	libvmod_debug \
	libvmod_std \
	libvmod_directors
